# bitpacker

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ccpp.yml
cmake/: Conan.cmake  scripts.cmake
include/bitpacker/: bit.hpp  bitpack.hpp  bitpacker.hpp  bitstruct.hpp  bytepack.hpp  data_view.hpp  platform.hpp
packaging/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  bit.test.cpp  bitstream.c  bitstream.h  constexpr_helpers.h  python_common.hpp  span.hpp  test_bincompat_arrays.cpp  test_bincompat_integers.cpp  test_bincompat_into_arrays.cpp  test_bincompat_into_integers.cpp  test_bitstream.cpp  test_byte_extract.cpp  test_byte_insert.cpp  test_common.hpp  test_compare_to_bitstruct.cpp  test_compare_to_python.cpp  test_helpers.cpp  test_main.cpp  test_pack_impl.cpp  test_specializations.cpp  test_tmp_formats.cpp  test_tmp_helpers.cpp  test_unpack_impl.cpp
